[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
notebook = "^7.3.2"
chromadb = "^0.6.3"
pinecone-client = "^5.0.1"
pandas = "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
sentence-transformers = "^3.3.1"
langchain-cerebras = "^0.5.0"
langchain = "^0.3.15"
langchain-core = "^0.3.31"
langchain-community = "^0.3.15"
arxiv = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
